project and post updates

--- a/assets/projects.json
+++ b/assets/projects.json
@@ -4,9 +4,27 @@
     "description": "This app was built to aid my team at Datasoft in gathering real time market information from Dhaka and Chittagong stock exchange.",
     "link": "https://github.com/shoimya/Web-Scraper"
   },
+
   {
     "name": "SQL-Lite Emulator",
     "description": "These are a series of projects built on top of each other to emulate SQL lite using python.",
     "link": "https://github.com/shoimya/DBMS"
+  },
+    
+  {
+    "name": "HATE-SPEECH-RECOGNITION using Maching Learning",
+    "description": "A reasearch project we did in class to identify hatespeech using different models and identify the accuracy.",
+    "link": "https://github.com/shoimya/HATE-SPEECH-RECOGNITION"
+  },
+  
+  {
+    "name": "Pedestrian-Collison-Avoidance-System",
+    "description": "A reasearch project on pedestrian collison avoidance systems",
+    "link": "https://github.com/shoimya/Pedestrian-Collison-Avoidance-System"
+  },
+  {
+    "name": "Platform game in C++",
+    "description": "A platform side-scrolling game developed using c++.",
+    "link": "https://github.com/shoimya/SpartyGnomeGame"
   }
 ]
